# titan

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: ci.yml  release.yml
crates/titan-app/: Cargo.toml  tauri.conf.json
crates/titan-app/capabilities/: default.json
crates/titan-app/src/: audit_log.rs  bookmarks.rs  devtools.rs  log_forward.rs  main.rs  nip07.rs  permissions.rs  prompt_queue.rs  signer.rs
crates/titan-app/ui/: app.js  chrome.css  chrome.html  chrome.js  helpers.js  helpers.test.js  index.html  names.html  style.css
crates/titan-bitcoin/: Cargo.toml
crates/titan-bitcoin/src/: codec.rs  indexer.rs  lib.rs  rpc.rs  store.rs  tx.rs
crates/titan-resolver/: Cargo.toml
crates/titan-resolver/src/: blossom.rs  cache.rs  lib.rs  manifest.rs  relay.rs
crates/titan-types/: Cargo.toml
crates/titan-types/src/: error.rs  lib.rs  name.rs  url.rs
docs/: architecture.md  blog-announcement.md  name-protocol.md  nostr-announcement.txt  roadmap.md  titan-bookmarks.md  whitepaper.md
scripts/: publish-zapstore.sh
