[package]
name = "titan-app"
description = "Titan nsite browser — Tauri desktop application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
titan-types = { path = "../titan-types" }
titan-resolver = { path = "../titan-resolver" }
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.37"
directories = "6"
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
