[package]
name = "titan-app"
description = "Titan nsite browser — Tauri desktop application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
titan-types = { path = "../titan-types" }
titan-resolver = { path = "../titan-resolver" }
tauri = { version = "2", features = ["unstable", "macos-private-api"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = { version = "0.37", features = ["nip04", "nip44"] }
directories = "6"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
