[package]
name = "titan-resolver"
description = "Nostr relay queries and Blossom blob fetching for Titan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
titan-types = { path = "../titan-types" }
nostr-sdk = "0.37"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
thiserror = "2"
sha2 = "0.10"
directories = "6"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
